--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <a class="navbar-logo" href="#">Patrick Laumond</a>
+  <a class="navbar-logo" routerLink="">Patrick Laumond</a>
   <ul class="navbar-list">
   </ul>
 
@@ -7,11 +7,11 @@
     <fa-icon [icon]="faBars" class="burger-icon"></fa-icon>
     <div class="burger-dropdown" [ngClass]="{ 'active': showDropdown }">
       <ul class="burger-menu">
-        <li><a href="#">MétaHisme</a></li>
-        <li><a href="#">Biographie</a></li>
-        <li><a href="#">Œuvre</a></li>
-        <li><a href="#">Actualité</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a routerLink="/metahisme">MétaHisme</a></li>
+        <li><a routerLink="/oeuvre">Œuvre</a></li>
+        <li><a routerLink="/news">Actualité</a></li>
+        <li><a routerLink="/contact">Contact</a></li>
+        <li><a routerLink="/biographie">Biographie</a></li>
       </ul>
     </div>
   </div>
