--- a/client/src/app/components/archetypes/archetypes.component.scss
+++ b/client/src/app/components/archetypes/archetypes.component.scss
@@ -1,23 +1,56 @@
-.image-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.image-gallery {
+  display: grid;
+  gap: 100px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: 20px;
+
+  .image-gallery-item {
+    min-height: 300px;
+    position: relative;
+
+    img {
+      cursor: pointer;
+      height: 100%;
+      object-fit: cover;
+      width: 100%;
+    }
+
+    h2 {
+      color: #999;
+      font-size: 1em;
+      margin: 10px 0
+    }
+  }
 }
 
-.image-wrapper {
+.modal {
+  background-color: #000;
+  display: none;
+  height: 100%;
+  left: 0;
+  overflow: auto;
+  position: fixed;
+  top: 0;
   width: 100%;
-  max-width: 600px;
-  margin-bottom: 20px;
-  text-align: center;
-}
+  z-index: 1;
 
-.image-wrapper img {
-  width: 100%;
-  height: auto;
-}
+  .modal-content {
+    align-items: center;
+    display: flex;
+    height: 80%;
+    justify-content: center;
+    margin: auto;
+    width: 80%;
+  }
 
-.image-wrapper h2 {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin: 10px 0;
+  .modal-image {
+    max-height: 100%;
+    max-width: 100%;
+  }
+
+  &.show {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
 }
