--- a/client/src/app/components/oeuvre/oeuvre.component.scss
+++ b/client/src/app/components/oeuvre/oeuvre.component.scss
@@ -1,13 +1,36 @@
 .Archetypes {
   font-size: 1em;
   line-height: 1em;
-  text-align: justify;
   margin: 20px;
+  padding: 0;
+
+  a {
+    text-decoration: none;
+  }
 
   h2 {
+    color: #999;
     font-size: 1.5em;
     font-weight: bold;
-    margin: 20px ;
-    color: inherit;
+    text-decoration: none;
   }
+
+  .custom-carousel {
+    margin: 20px;
+  }
+
+  .carousel-item {
+    width: 25%;
+    padding: 10px;
+  }
+
+  .carousel-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+
+
+
 }
