--- a/client/src/app/components/archetypes/archetypes.component.scss
+++ b/client/src/app/components/archetypes/archetypes.component.scss
@@ -2,29 +2,39 @@
   display: grid;
   gap: 100px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  margin: 20px;
+  padding: 15px;
 
   .image-gallery-item {
     min-height: 300px;
     position: relative;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     img {
       cursor: pointer;
-      height: 100%;
-      object-fit: cover;
       width: 100%;
+      height: auto;
+      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
+      flex-grow: 1;
     }
 
     h2 {
       color: #999;
       font-size: 1em;
-      margin: 10px 0
+      margin: auto 0;
+      white-space: wrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 100%;
+      text-align: center;
     }
   }
 }
 
 .modal {
-  background-color: #000;
+  background-color: #fffcfcbe;
   display: none;
   height: 100%;
   left: 0;
@@ -37,20 +47,24 @@
   .modal-content {
     align-items: center;
     display: flex;
-    height: 80%;
+    height: 90%;  // Modifié pour occuper plus d'espace sur l'écran
     justify-content: center;
     margin: auto;
-    width: 80%;
+    width: 90%;   // Modifié pour occuper plus d'espace sur l'écran
   }
 
   .modal-image {
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 90vh;
+    max-width: 90vw;
   }
 
   &.show {
     align-items: center;
     display: flex;
     justify-content: center;
+    
+    .close {
+      display: inline-block; // Afficher la croix quand le modal est ouvert
+    }
   }
 }
