--- a/src/app/components/archetypes/archetypes.component.scss
+++ b/src/app/components/archetypes/archetypes.component.scss
@@ -24,6 +24,7 @@
       color: #999;
       font-size: 1em;
       margin: auto 0;
+      margin-top: 15px;
       white-space: wrap;
       overflow: hidden;
       text-overflow: ellipsis;
