--- a/src/app/components/drawings/drawings.component.html
+++ b/src/app/components/drawings/drawings.component.html
@@ -1,6 +1,6 @@
 <mat-paginator [length]="imageUrls.length"
                [pageSize]="10"
-               [pageSizeOptions]="[5, 10, 15, 20,25]"
+               [pageSizeOptions]="[5,10,15,20,25]"
                #paginator
                aria-label="Select page">
 </mat-paginator>
