--- a/src/app/pages/oeuvre/oeuvre.component.html
+++ b/src/app/pages/oeuvre/oeuvre.component.html
@@ -20,22 +20,22 @@
   </carousel>
 </div>
 
-<!-- <div class='Documentations'>
+<div class='Documentations'>
 <a routerLink='/Drawings'>
 <h2>Drawings</h2>
 </a>
-  <carousel [itemsPerSlide]="4" [singleSlideOffset]="true" [showIndicators]="false" class="custom-carousel">
+<carousel [itemsPerSlide]="4" [singleSlideOffset]="true" [interval]="0" [showIndicators]="false" class="custom-carousel">
     <slide *ngFor="let url of imageUrlsDrawings; let i = index" class="carousel-item" >
       <img [src]="url" class="carousel-image">
     </slide>
   </carousel>
 </div>
 
-<div class='Documentations'>
+<!-- <div class='Documentations'>
 <a routerLink='/Transcriptions'>
 <h2>Transcriptions</h2>
 </a>
-  <carousel [itemsPerSlide]="4" [singleSlideOffset]="true" [showIndicators]="false" class="custom-carousel">
+   <carousel [itemsPerSlide]="4" [singleSlideOffset]="true" [interval]="0" [showIndicators]="false" class="custom-carousel">
     <slide *ngFor="let url of imageUrlsTranscriptions; let i = index" class="carousel-item" >
       <img [src]="url" class="carousel-image">
     </slide>
