--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,11 @@
 <nav class="navbar">
   <a class="navbar-logo" routerLink="">Patrick Laumond</a>
   <ul class="navbar-list">
+    <li><a routerLink="/metahisme">MétaHisme</a></li>
+    <li><a routerLink="/oeuvre">Œuvre</a></li>
+    <li><a routerLink="/news">Actualité</a></li>
+    <li><a routerLink="/contact">Contact</a></li>
+    <li><a routerLink="/biographie">Biographie</a></li>
   </ul>
 
   <div class="navbar-burger" (click)="toggleBurgerMenu()" [ngClass]="{ 'active': active }">
