--- a/src/app/components/drawings/drawings.component.scss
+++ b/src/app/components/drawings/drawings.component.scss
@@ -2,7 +2,7 @@
     display: grid;
     gap: 100px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    padding: 15px;
+    padding: 50px;
   
     .image-gallery-item {
       min-height: 300px;
@@ -10,6 +10,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      
       img {
         cursor: pointer;
         width: 100%;
@@ -35,7 +36,7 @@
   }
   
   .modal {
-    background-color: #fffcfcbe;
+    background-color: #fffcfcd7;
     display: none;
     height: 100%;
     left: 0;
@@ -57,6 +58,7 @@
     .modal-image {
       max-height: 90vh;
       max-width: 90vw;
+      border-radius: 5px;
     }
   
     &.show {
