--- a/src/app/pages/oeuvre/oeuvre.component.scss
+++ b/src/app/pages/oeuvre/oeuvre.component.scss
@@ -1,36 +1,37 @@
-.Documentations {
-  font-size: 1em;
-  line-height: 1em;
-  margin: 20px;
-  padding: 0;
-
-  a {
-    text-decoration: none;
-  }
-
-  h2 {
-    color: #999;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-decoration: none;
-  }
-
-  .custom-carousel {
-    margin: 20px;
-  }
-
-  .carousel-item {
-    width: 25%;
-    padding: 10px;
-  }
-
-  .carousel-image {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-
-
-
+.carousels-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 100%;
+    .carousel-wrapper {
+        box-sizing: border-box;
+        width: 48%;
+        margin-bottom: 20px;
+        .carousel-item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .title-container {
+            text-align: center;
+            a {
+                text-decoration: none;
+                 :hover {
+                    text-decoration: underline #cc0000;
+                }
+                h2 {
+                    color: #999;
+                    font-size: 1.3em;
+                    font-weight: bold;
+                }
+            }
+        }
+        .carousel-image {
+            width: 100%;
+            max-height: 400px;
+            object-fit: contain;
+            margin-bottom: 20 px;
+        }
+    }
 }
