--- a/src/app/pages/oeuvre/oeuvre.component.scss
+++ b/src/app/pages/oeuvre/oeuvre.component.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: 20px;
     max-width: 100%;
     .carousel-wrapper {
         box-sizing: border-box;
@@ -22,7 +23,7 @@
                 }
                 h2 {
                     color: #999;
-                    font-size: 1.3em;
+                    font-size: 1em;
                     font-weight: bold;
                 }
             }
