--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,5 +37,6 @@ $PatrickLaumond-theme: mat.define-light-theme((
 
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+html, body { height: 100%; font-family: 'Lato', sans-serif; }
+body { margin: 0;  }
