--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-  <header>
-    <app-navbar></app-navbar>
+  <app-navbar></app-navbar>
+  <div class="content">
     <router-outlet></router-outlet>
-  </header>
+  </div>
+  <app-footer></app-footer>
 
