--- a/src/app/pages/oeuvre/oeuvre.component.scss
+++ b/src/app/pages/oeuvre/oeuvre.component.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 50px;
     max-width: 100%;
     .carousel-wrapper {
         box-sizing: border-box;
@@ -13,6 +13,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-left: 10px;
+
         }
         .title-container {
             text-align: center;
@@ -23,16 +25,28 @@
                 }
                 h2 {
                     color: #999;
-                    font-size: 1em;
+                    font-size: 1.15em;
                     font-weight: bold;
                 }
             }
         }
         .carousel-image {
             width: 100%;
-            max-height: 400px;
-            object-fit: contain;
+            height : 40vh;
+            object-fit: fill;
             margin-bottom: 20 px;
+        }
+    }
+  
+    @media only screen and (max-width: 1024px) {
+        .carousel-wrapper {
+            width: 100%;
+        }
+        .title-container{
+            a{
+                font-size: 1.5em
+
+            }
         }
     }
 }
