--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,5 +38,14 @@ $PatrickLaumond-theme: mat.define-light-theme((
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-html, body { height: 100%; font-family: 'Lato', sans-serif; }
-body { margin: 0;  }
+html, body {
+  font-family: 'Lato', sans-serif;
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
