🍱 Add typo, switch navbar option

--- a/src/app/pages/metahisme/metahisme.component.scss
+++ b/src/app/pages/metahisme/metahisme.component.scss
@@ -1,8 +1,20 @@
 .text-container {
-  width: 80%; /* largeur de la zone de texte */
+  width: 90%; /* largeur de la zone de texte */
   margin: auto; /* centrage horizontal */
   font-size: 1.2em; /* taille de police */
   line-height: 1.5em; /* hauteur de ligne */
   text-align: justify; /* alignement justifié */
-  padding: 20px; /* espacement intérieur */
+  padding: 0px; /* espacement intérieur */
+
+  p{
+    margin: 1.2em 0;
+    padding: 0;
+  }
+  
+  #ps{
+    font-size: 0.8em;
+    font-style: italic;
+    text-align: right;
+    
+  }
 }
