--- a/src/app/components/archetypes/archetypes.component.scss
+++ b/src/app/components/archetypes/archetypes.component.scss
@@ -21,15 +21,15 @@
     }
 
     h2 {
-      color: #999;
-      font-size: 1em;
+      color: #525252;
+      font-size: 11px;
       margin: auto 0;
       margin-top: 15px;
       white-space: wrap;
       overflow: hidden;
       text-overflow: ellipsis;
       width: 100%;
-      text-align: center;
+      text-align: start;
     }
   }
 }
