--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,9 +37,10 @@ $PatrickLaumond-theme: mat.define-light-theme((
 
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian&display=swap');
+
 html, body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Noto Serif Georgian', serif;
   height: 100%;
   margin: 0;
 }
