--- a/src/app/pages/metahisme/metahisme.component.scss
+++ b/src/app/pages/metahisme/metahisme.component.scss
@@ -10,8 +10,9 @@
     margin: 1.2em 0;
     padding: 0;
   }
-  
+
   #ps{
+    color: #999999;
     font-size: 0.8em;
     font-style: italic;
     text-align: right;
