--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <p-menubar [model]="items" *ngIf="!isMobile">
-    <ng-template pTemplate="end">
+    <ng-template pTemplate="start">
         <a class="Laumond" routerLink="">
             Patrick Laumond
         </a>
