--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -11,13 +11,14 @@ color: #8B0000;
 
 }
 *{
-  font-family: 'DM Sans', sans-serif;
   color: #525252;
   text-decoration: none;
 }
 
 :host ::ng-deep .p-menubar {
   display: flex;
+  margin-left: 3%;
+  margin-bottom: 3%;
   align-items: right;
   background-color: #ffffff00;
   border: none;
