--- a/src/app/pages/metahisme/metahisme.component.html
+++ b/src/app/pages/metahisme/metahisme.component.html
@@ -63,17 +63,16 @@
     Le MétaHisme s’inscrit dans un changement d’époque dont il est la retranscription.
   </p>
 
-  <p>
+  <p id="citation">
     “Méta, car exprimant le tout, isme comme concept et suffixe universel, que l’on retrouve dans tous les mouvements et H, huitième lettre de l’alphabet, (lettre de l’infini, ∞, lemniscate) et séparateur. Lettre à haute portée symbolique. Cérébral et sensible, virtuel et réel, peinture, sculpture, concept, installation, le travail de LAUMOND est tout cela et bien au-delà. Issue d'une démarche d'une rigueur absolue, son
     œuvre demeure la manifestation la plus radicale d'un esprit en liberté.”<br>
-    Edith Herlemont-Lassiat, Critique d’art - Exporevue.com
+    <a id="Edith">Edith Herlemont-Lassiat, Critique d’art - Exporevue.com</a>
   </p>
 
   <p id="ps">
     * Le Manifeste du MétaHisme existe déjà, ce travail de théorisation est concrétisé comme une œuvre en soi consultable sur demande.
   </p>
-  <br>
-  <br>
+
   <p>Patrick Laumond</p>
 </div>
 </body>
