--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,6 @@
 .footer {
-    display: block;
     background-color: #f5f5f5;
-    position: absolute;
-    bottom: 0;
+    position: st;
     width: 100vw;
     bottom: 0;
     padding: 20px 0;
