--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -48,6 +48,7 @@ a{
 
 p-menubar {
     li {
+        position: fixed;
         margin-right: 20px;
         font-size: 24px;
         transition: color 0.2s ease-in-out;
