--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: #f5f5f5;
-    position: st;
+    position: fixed;
     width: 100vw;
     bottom: 0;
     padding: 20px 0;
