--- a/src/app/components/transcriptions/transcriptions.component.html
+++ b/src/app/components/transcriptions/transcriptions.component.html
@@ -8,7 +8,7 @@
 <div class="image-gallery">
   <div class="image-gallery-item"
        *ngFor="let url of imageUrls | slice:(paginator.pageIndex)*(paginator.pageSize):((paginator.pageIndex + 1)*(paginator.pageSize)); let i = index">
-    <img [src]="url" [alt]="titles[url]" (click)="openModal(i)" />
+    <img [src]="url" [alt]="titles[url]" (click)="openModal(i + paginator.pageIndex * paginator.pageSize)" />
     <h2>{{ titles[url] }}</h2>
   </div>
 
