--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -66,7 +66,12 @@ p-menubar {
         &:hover a {
             color: #8B0000;
         }
-    }
+    };
+    img{
+        width: 40px;
+        height: 22px;
+      }
+    
 }
 
 p-sidebar {
