--- a/src/app/pages/oeuvre/oeuvre.component.html
+++ b/src/app/pages/oeuvre/oeuvre.component.html
@@ -9,7 +9,7 @@
     </p-carousel>  
     <div class="title-container">
       <a routerLink="/archetypes">
-        <h2>Archetypes</h2>
+        <h2>{{ 'Oeuvres.Archétypes' | translate}}</h2>
       </a>
     </div>
   </div>
@@ -24,7 +24,7 @@
     </p-carousel>  
     <div class="title-container">
       <a routerLink="/deployments">
-        <h2>Deployments</h2>
+        <h2>{{ 'Oeuvres.Déploiements' | translate}}</h2>
       </a>
     </div>
 
@@ -40,7 +40,7 @@
     </p-carousel>  
     <div class="title-container">
       <a routerLink="/transcriptions">
-        <h2>Transcriptions</h2>
+        <h2>{{ 'Oeuvres.Transcriptions' | translate}}</h2>
       </a>
     </div>
   </div>
@@ -55,7 +55,7 @@
       </p-carousel>  
       <div class="title-container">
         <a routerLink="/drawings">
-          <h2>Drawings</h2>
+          <h2>{{ 'Oeuvres.Dessins' | translate}}</h2>
         </a>
       </div>
     </div>
